<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <!--Apps button-->
    <string name="sportify_steamer">SPOTIFY STEAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="bacon_reader">BACON READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    
    <!--Button strings-->
    <string name="open_sportify">Button to open Sportify Steamer App</string>
    <string name="open_scores">Button to open Scores App</string>
    <string name="open_library">Button to open Library App</string>
    <string name="open_bigger">Button to open Build It Bigger App</string>
    <string name="open_bacon">Button to open Bacon Reader App</string>
    <string name="open_capstone">Button to open Capstone App</string>

    <string name="top_movies">Top Movies</string>
    <string name="pop_movies">Pop Movies</string>
    <string name="button_favorate">MARK AS FAVORATE</string>

    <string name="movies_api">http://api.themoviedb.org/3/discover/movie?</string>
    <string name="pop_movie_api">http://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc</string>
    <string name="top_movie_api">http://api.themoviedb.org/3/discover/movie?sort_by=vote_count.desc</string>

</resources>
